fixed alignment

--- a/style.css
+++ b/style.css
@@ -9,6 +9,10 @@ body {
   background-color: hsl(210, 46%, 95%);
   color: hsl(0, 0%, 100%);
   font-size: 13px;
+  min-height: 100vh;
+  display: flex;
+  justify-content: center;
+  align-items: center;
 }
 
 h4 {
@@ -90,7 +94,6 @@ p {
   .container {
     grid-template-columns: repeat(4, 1fr);
     max-width: 1100px;
-    margin: 100px auto 0;
     
   }
 
